2008-06-17  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (on_partial_cell_renderer_edited): Added function edit
	a cell_renderer on partial ingress treeviews.
	(on_button_ok_ingress_clicked): Added
	on_partial_cell_renderer_edited as handler for signal edited on
	"Cant. Ing." column renderer for partial invoice and guide ingress.

2008-06-16  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (AskPagarCaja): Deleted function.
	(PagarDocumentoWin, ClosePagarDocumentoWin, PagarToggle): Deleted function
	(on_btn_pay_invoice_clicked): Created function to deal with
	clicked action and pay an invoice.
	(Pagar): Deleted function.
	(FillPartialTree): Added function to fill treeview on partial
	ingress for guide an invoices.

	* postgres-functions.c (PagarFactura): Commented code that insert
	data into "pagos" table. Deleted previous parameters and just use
	id_invoice to update an invoice.

	* compras.c (CalcularTotalesGuias): Changed to use the new tables
	guias_compra_detalle and guias_compra.

2008-06-15  Jonathan Gonzalez V.  <zeus@gnu.org>

	* compras.c (ClearPagosData): Deleted Function.
	(on_btn_ok_srch_provider_clicked): Added var tab and guide to know
	in what tab we are so we can know if we'll set on guide or invoice
	labels.
	(on_entry_guide_invoice_provider_activate): Changed from
	on_entry_guide_invoice_activate().
	(on_entry_invoice_provider_activate): Silly function that use
	on_entry_guide_invoice_provider_activate() to show up the search
	provider window.
	(compras_win): Added store to tree_view_invoice_list treeview.
	(IngresoDetalle): Use GtkSelection received with the signal.

2008-06-13  Jonathan Gonzalez V.  <zeus@gnu.org>

	* postgres-functions.c (AsignarFactAGuia): Changed to use the
	plpsql function.

	* compras.c (InformeCompras, InformeComprasShow): Deleted.

	* postgres-functions.c (IngresarGuia): Added the column list to
	insert data.
	(IngresarDetalleDocumento): Changed to use the new tables
	separated for guide and invoice.
