@@ -5,6 +5,7 @@
 	(on_button_ok_ingress_clicked): Added
 	on_partial_cell_renderer_edited as handler for signal edited on
 	"Cant. Ing." column renderer for partial invoice and guide ingress.
+	(CambiarStock): Deleted function.
 
 2008-06-16  Jonathan Gonzalez V.  <zeus@gnu.org>
 
